--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ hf-xet==1.2.0
 huggingface-hub==0.36.0
 idna==3.11
 Jinja2==3.1.6
+joblib==1.5.3
 MarkupSafe==3.0.3
 mpmath==1.3.0
 networkx==3.4.2
@@ -30,19 +31,27 @@ nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
 packaging==25.0
+pandas==2.3.3
 peft==0.18.0
 psutil==7.1.3
 python-chess==1.999
+python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
 safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+six==1.17.0
 stockfish==3.28.0
 sympy==1.14.0
+threadpoolctl==3.6.0
 tokenizers==0.22.1
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.3
 triton==3.5.1
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.5.0
